--- a/itStep/src/app/header/header.component.html
+++ b/itStep/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <div class="container-lite">
-      <h2>Shop</h2>
+      <h2 routerLink="/">Shop</h2>
       <div class="search">
         <input placeholder="Search..." type="search" />
         <ion-icon name="search-outline"></ion-icon>
