--- a/itStep/src/app/products/products.component.html
+++ b/itStep/src/app/products/products.component.html
@@ -17,20 +17,27 @@
     <div class="del">
       <h1>შეფასება</h1>
       <ion-icon name="close-outline"></ion-icon>
-      <mat-divider></mat-divider>
     </div>
+    <mat-divider></mat-divider>
     <h1>Rating</h1>
     <div class="rating">
       <mat-icon *ngFor="let star of stars" (click)="setRating(star)">{{
         star
       }}</mat-icon>
     </div>
-    <p>
+    <form>
       <mat-form-field appearance="fill">
         <mat-label>Fill form field</mat-label>
-        <input matInput placeholder="Placeholder" />
+        <input matInput placeholder="email1234@gmail.com" />
         <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
       </mat-form-field>
-    </p>
+      <mat-form-field>
+        <mat-label>Textarea</mat-label>
+        <textarea placeholder="Write description" matInput></textarea>
+      </mat-form-field>
+      <button mat-flat-button color="primary">შეფასება</button>
+    </form>
+    <mat-divider></mat-divider>
+    <button mat-flat-button color="warn">დახურვა</button>
   </div>
 </div>
