--- a/itStep/src/app/filter-products/filter-products.component.css
+++ b/itStep/src/app/filter-products/filter-products.component.css
@@ -1,6 +1,35 @@
-body,
-html {
-  overflow: auto;
+.search-bar li,
+.aside-search p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  cursor: pointer;
+}
+.product-search {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  gap: 60px;
+}
+.search-bar {
+  position: relative;
+}
+.aside-search {
+  margin-top: 50px;
+  position: absolute;
+  top: -50px;
+  transform: translateX(223px);
+  display: none;
+}
+.aside-search p {
+  background-color: #ffff;
+}
+.search-bar ul > li:first-child:hover + .aside-search {
+  display: block;
 }
 .products {
   display: grid;
@@ -21,32 +50,7 @@ html {
 h1 {
   margin: 0;
 }
-.slider {
-  background-position: center;
-  width: 100%;
-  height: 400px;
-  background-image: url(../../assets/computer-hardware-2625895-5d9007ac0d44404588321d255fc82049.jpg);
-  border: 1px solid #000;
-  border-radius: 9px;
-}
-.slider-content h1 {
-  color: #fff;
-  font-size: 40px;
-  line-height: 60px;
-}
-.slider-content button {
-  width: 190px;
-  color: #ffff;
-  height: 50px;
-  font-size: 17px;
-  background-color: #ff5733;
-  border-radius: 7px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 7px;
-  font-weight: 400;
-}
+
 .main-container {
   display: flex;
   justify-content: center;
@@ -161,36 +165,14 @@ h1 {
 .add-to-cart-button:hover {
   background-color: #555;
 }
-.search-bar li,
-.aside-search p {
+.container {
   display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 20px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  cursor: pointer;
+  justify-content: center;
 }
-.product-search {
-  margin-top: 120px;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  gap: 60px;
+.container-lite {
+  padding: 0px 20px;
 }
-.search-bar {
-  position: relative;
-}
-.aside-search {
-  margin-top: 50px;
-  position: absolute;
-  top: -50px;
-  transform: translateX(223px);
-  display: none;
-}
-.aside-search p {
-  background-color: #ffff;
-}
-.search-bar ul > li:first-child:hover + .aside-search {
-  display: block;
+.h1_lite {
+  text-align: center;
+  margin-bottom: 80px;
 }
